# WCBT

./: .coverage_codex  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE.md  README.md  UpdateAndRun.bat  afe copy-only execution for materialized backup runs  cloc-by-file.md  cloc_by_file_md.bat  pyproject.toml  restore_cli.patch  sync-dev.bat  sync-full.bat  tmp_probe_wrapper.bat
.github/workflows/: ci.yml
.pre-commit-cache/: tmpj9yv8w39  tmpj9yv8w39-journal  tmpw0vuivh1-journal
backup_engine/: __init__.py  clock.py  compression.py  data_models.py  errors.py  exceptions.py  init_profile.py  job_binding.py  manifest_store.py  oz0_paths.py  paths_and_safety.py  profile_lock.py  template_policy.py  verify.py
backup_engine/backup/: execute.py  materialize.py  plan.py  render.py  scan.py  service.py
backup_engine/profile_store/: __init__.py  api.py  errors.py  rules.py  schema.py  sqlite_store.py
backup_engine/restore/: __init__.py  data_models.py  errors.py  execute.py  execution_results.py  journal.py  materialize.py  plan.py  service.py  stage.py  verification_results.py  verify.py
backup_engine/scheduling/: __init__.py  (+4 more)
gui/: __init__.py  app.py  mock_app.py  mock_data.py  mock_wcbt_gui.py  settings_store.py
tests/: audit_docstrings.py  test_audit_docstrings_tool.py  test_cli_exit_codes.py  test_cli_parser_restore.py  test_cli_schedule.py  test_cli_smoke.py  test_copy_execution.py  test_default_data_root.py  test_end_to_end_backup_restore.py  test_gui_app.py  test_gui_authoring_tab.py  test_gui_restore_job_history.py  test_gui_run_tab.py  test_gui_scheduling_tab.py  test_gui_settings_store.py  test_init_profile.py  test_manifest_roundtrip.py  test_manifest_store_list_backup_runs.py  test_paths_and_safety.py  test_profile_lock.py  test_profile_store_schedule_roundtrip.py  test_profile_store_sqlite_roundtrip.py  test_restore_cli_dry_run_artifacts.py  test_restore_conflicts.py  test_restore_execute_promotion.py  test_restore_execution_journal.py  test_restore_plan_materialize.py  test_restore_pre_restore_backup.py  test_restore_promote_stage_to_destination.py  test_restore_promotes_stage.py  test_restore_service_execute.py  test_restore_stage_build.py  test_restore_verify_stage.py  test_rule_validation.py  test_schedule_service.py  test_schtasks_backend.py  test_verify_run_writes_jsonl_on_failure.py  test_verify_run_writes_jsonl_on_failure_hash_mismatch.py  test_verify_run_writes_jsonl_on_failure_unreadable.py  test_verify_run_writes_jsonl_on_success.py  (+3 more)
tools/: audit_docstrings.py
wcbt/: README.md  __main__.py  cli.py
(+16 files in other folders)
