[project]
name = "wcbt"
version = "0.1.0"
description = "World Chronicle Backup Tool (WCBT)"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name = "Eric J. Turman"}]
dependencies = [
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"


[project.optional-dependencies]
gui = ["PySide6>=6.6"]
security = ["keyring>=25.0"]
compression = ["zstandard>=0.22"]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "mypy>=1.8",
]

[project.scripts]
wcbt = "wcbt.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100
[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["wcbt", "backup_engine"]
