[project]
name = "wcbt"
version = "0.1.0"
description = "World Chronicle Backup Tool (WCBT)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Eric J. Turman" }]

dependencies = [
    "pyside6>=6.10.1",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
security = ["keyring>=25.0"]
compression = ["zstandard>=0.22"]


[project.scripts]
wcbt = "wcbt.cli:main"


# -------------------------
# Tooling Configuration
# -------------------------

[[tool.mypy.overrides]]
module = [
    "gui.*",
]
ignore_errors = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_optional = true


[tool.pytest.ini_options]
addopts = "-q --cov=backup_engine --cov=wcbt --cov-report=term-missing:skip-covered"
testpaths = ["tests"]


[tool.coverage.run]
branch = true
source = ["backup_engine", "wcbt"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true


[tool.hatch.build.targets.wheel]
packages = ["wcbt", "backup_engine"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8",
    "mypy>=1.19",
    "pip-audit>=2.10.0",
]
